--- a/style.css
+++ b/style.css
@@ -226,3 +226,151 @@ address {
 address p {
     margin-top: 15px;
 }
+
+/* PAGE CONTACT */
+
+.corps-contact{
+    /* margin-top: 20vh; */
+    width: 100%;
+}
+/* Formulaire de Contact */
+
+.formulaire{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+}
+
+.form{
+    width: 35vw;
+    display:flex;
+    flex-direction: column;
+    background: wheat;
+    border-radius: 2%;
+    box-shadow: 1px 1px 15px rgba(170, 165, 165, 0.596)
+}
+.form h2{
+    text-align: center;
+    padding: 20px 0;
+    font-size: 28px;
+}
+
+.input-box{
+    position:relative;
+    width: 80%;
+    background-color: #faf0e6;
+    justify-content: center;
+    margin-left: 10%;
+}
+
+.input-box:last-child{
+    margin-bottom: 10%;
+}
+
+.input-box input,
+.input-box textarea{
+    width: 100%;
+    padding: 10px 10px;
+    margin: 10px 0;
+    font-size: 16px;
+    border:none;
+    resize:none;
+    outline: none;
+    border-bottom: 3px solid whitesmoke;
+    background-color:#faf0e6;
+}
+
+.input-box input:first-child{
+    padding-top:30px;
+}
+
+.input-box span{
+    position:absolute;
+    left: 0; 
+    padding: 10px 10px;
+    font-size: 16px;
+    margin: 10px 0;
+    pointer-events: none;
+    transition: 0.5s;
+    color: #666;
+    /* background-color: whitesmoke; */
+
+}
+
+.input-box input:focus ~ span,
+.input-box input:valid ~ span
+.input-box textarea:focus ~ span,
+.input-box textarea:valid ~ span{
+    color: #e91e63;
+    font-size: 12px;
+    transform: translateY(-20px);
+
+}
+
+.input-box input[type="submit"]{
+    width: 100px;
+    border:none;
+    border-radius: 10%;
+    padding: 10px;
+    margin-left: 40%;
+    background: wheat;
+    font-size:18px ;
+    cursor: pointer;
+}
+   
+.input-box input[type="submit"]:hover,
+.input-box input[type="submit"]:focus{
+    filter: drop-shadow(1px 1px 5px gray);
+    transition:ease-out 0.4s;
+    color:black;
+}
+
+
+
+       /* TABLEAU */
+
+
+.bodytab{
+    display: flex;
+    flex-direction: column;
+}
+
+.titre-tableau{
+    width: 100%;
+    text-align: center;
+    margin-bottom: 10vh;
+}
+
+table,thead, th, td{
+    border:1px solid black;
+    padding: 5px;
+    border-collapse: collapse;
+    
+}
+
+table{
+    background: blanchedalmond;
+    width: 60vw;
+    margin: 0 20vw;
+    table-layout: fixed;
+    
+    
+}
+
+
+td {
+    background: lightyellow;
+    width: 40px;
+}
+
+thead th{
+    background: whitesmoke;
+
+} 
+
+tfoot td{
+    text-align: center;
+}
